<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="npcimage_description">An image illustrating the current activity.</string>
    <string name="info_text">GeoQuest by Qeevee GmbH. App version is</string>
    <string name="alert_endGameTitel">End this game</string>
    <string name="alert_endGameMessage">Do you really want to end this game?</string>
    <string name="alert_endGameButtonOK">Yes, end</string>
    <string name="alert_endGameButtonCancel">No, keep playing</string>
    <string name="default_inventory_name">Inventory</string>
    <string name="start_text_game_list_progress_download_text">Loading repositories</string>
    <string name="start_text_game_list_progress_process_text">Processing repository data</string>
    <string name="start_button_game_list_text">Select a new Quest</string>
    <string name="start_welcome">Welcome to GeoQuest!</string>
    <string name="start_text_last_game_text">Last played Quest:</string>
    <string name="start_text_last_game_text_no_game">You haven\'t played a Quest recently</string>
    <string name="start_gameNotFound">Game not found</string>
    <string name="start_toast_download_failed">Repo list download failed - check your internet connection and try again by choosing "Reload repo data" from menu or restarting the app!</string>
    <string name="start_downloadGame">Downloading game from GeoQuest server</string>
    <string name="start_startGame">Starting locally stored game</string>
    <string name="start_fetchingDataFromServer">Fetching game information from server</string>
    <string name="start_initializeGame">Loading Missions</string>
    <string name="start_gameFileCouldNotBeParsed">Sorry, this game file could not be parsed.</string>
    <string name="start_gameList_headerPart">Games in</string>
    <string name="start_gameList_headerPartNoLoc">no Location</string>
    <string name="start_gameList_headerPartLoc">with Location</string>
    <string name="start_repoList_header">Accessible Repositories</string>
    <string name="predefinedRepoName">Preinstalled quests</string>
    <string name="sortoptionsHeaderStart">Sort by:</string>
    <string name="sortByName">Name</string>
    <string name="sortByDate">Date (newest first)</string>
    <string name="sortByDistance">Distance</string>
    <string name="sortByLastPlayed">Last played</string>
    <string name="game_list_sort">Sort...</string>
    <string name="downloadDialogTitleSuffix">is downloading</string>
    <string name="downloadDialogMessage">Please wait ...</string>
    <string name="deleteAllDialogTitle">Really remove all quest from this device?</string>
    <string name="dialogTerminateAppTitle">Really terminate this app?</string>
    <string name="dialogEndGameTitle">Really leave this quest?</string>
    <string name="messageDownloadFinishedPrefix">Quest</string>
    <string name="messageDownloadFinishedSuffix">dowloaded and is starting ...</string>
    <string name="messageDownloadErrorPrefix">Error downloading quest</string>
    <string name="button_text_accept">Accept</string>
    <string name="button_text_play">Play</string>
    <string name="button_text_next">Next</string>
    <string name="button_text_proceed">Proceed</string>
    <string name="button_text_record">Record</string>
    <string name="button_text_repeat">Repeat</string>
    <string name="button_text_stop">Stop</string>
    <string name="button_text_use">Use</string>
    <string name="default_endButtonText">Continue with next mission</string>
    <string name="menu_quit">Quit app</string>
    <string name="menu_endGame">End game</string>
    <string name="menu_preferences">Prefs</string>
    <string name="menu_history">History</string>
    <string name="menu_localGames">Start quests</string>
    <string name="menu_gamesInCloud">Load quests</string>
    <string name="menu_imprint">Imprint</string>
    <string name="menu_inventory">Inventory</string>
    <string name="menu_deleteAllQuests">Delete All</string>
    <string name="menu_info">Info</string>
    <string name="menu_debugMode">Debug Mode</string>
    <string name="audiorecord_task_default">Your task: record a piece of audio!</string>
    <string name="audiorecord_activityIndicator_initial">No recording made yet!</string>
    <string name="audiorecord_activityIndicator_recording">Recording ...</string>
    <string name="audiorecord_activityIndicator_ready">You made an audio record!\nRecord again? Use it? Replay?</string>
    <string name="audiorecord_activityIndicator_playing">Playing your recorded audio ...</string>
    <string name="startingARView">Starting AR View ...</string>
    <string name="external_mission_description_default">Starting external mission</string>
    <string name="external_mission_result_default">Back from external mission</string>
    <string name="imageCapture_task_default">Your task: take a picture!</string>
    <string name="imageCapture_UploadOK">OK, your photo has been uploaded.</string>
    <string name="imageCapture_UploadERROR">Error while uploading your picture.</string>
    <string name="imageCapture_taskdescription_default">Take an impressive image ...</string>
    <string name="imageCapture_button_takePicture">Start camera ...</string>
    <string name="imageCapture_replyDone_default">OK, your photo has been stored.</string>
    <string name="map_loading">Loading Map</string>
    <string name="menu_center">Center Map</string>
    <string name="menu_mockGPS">Switch to mocked location</string>
    <string name="menu_unmockGPS">Switch to real location</string>
    <string name="map_mockGPSTimeInterval">2000</string>
    <string name="menu_zoomToQuestArea">Zoom in Game Area</string>
    <string name="multipleChoiceQuestion_default_shuffle_mode">false</string>
    <string name="npctalk_endButtonText">Proceed</string>
    <string name="question_reply_wrong_default">No, that was wrong.</string>
    <string name="question_reply_correct_default">Yes, that was correct.</string>
    <string name="question_proceed_button">Proceed</string>
    <string name="question_repeat_button">Try again</string>
    <string name="questionandanswer_successfullyCompletedMission">You successfully completed this mission.</string>
    <string name="questionandanswer_notEnoughCorrectAnswers">You have not enough correct answers.</string>
    <string name="questionandanswer_rightAnswer">Right Answer :)</string>
    <string name="questionandanswer_wrongAnswer">Wrong Answer :(</string>
    <string name="qrtagreading_startscanbutton_default">Start Scanning ...</string>
    <string name="qrtagreading_taskdescription_default">Search for the QR code and scan it ...</string>
    <string name="qrtagreader_product_ifright">You found it.\nCongratulations!</string>
    <string name="qrtagreader_product_ifwrong">Sorry, but this is not what you are looking for.\nGo on to find it!</string>
    <string name="textquestion_answerET_hint_default">Enter your answer here ...</string>
    <string name="videoplay_finishdialog_title">Stop watching?</string>
    <string name="videoplay_finishdialog_message"></string>
    <string name="videoplay_finishdialog_keepwatching">No</string>
    <string name="videoplay_finishdialog_watchagain">Watch again</string>
    <string name="videoplay_finishdialog_leave">Yes</string>
    <string name="videoplay_errordialog_message">I can not play that video.</string>
    <string name="missing_hotspot_description">No description for this hotspot availbale. Sorry.</string>
    <string name="preferencesTitle">Preferences</string>
    <string name="pw_dialog_title">Password</string>
    <string name="pw_dialog_descr">This action is password protected. Please submit your password.\nIf you have forgotten your password you have to reinstall the app!</string>
    <string name="pw_dialog_wrong_pw">Wrong password!</string>
    <string name="pref_cat_server_settings">Server settings</string>
    <string name="pref_server_url_title">Server URL</string>
    <string name="pref_server_url_summary">Defines the game server URL. Don\'t change this unless you want to use your own server.</string>
    <string name="pref_server_url_dialog_title">Server URL</string>
    <string name="pref_server_url_dialog_message">Set the URL of the game server. By default, this is the Qeevee server. Only change this, if you want to use your own server.</string>
    <string name="pref_cat_game_start">Game start</string>
    <string name="pref_auto_start_game_check_title">Load quest at application start</string>
    <string name="pref_auto_start_game_check_summary">Defines whether to load a specific quest at application startup</string>
    <string name="pref_auto_start_game_title">Startup quest</string>
    <string name="pref_auto_start_game_summary">Choose a quest to automatically start at application startup</string>
    <string name="pref_auto_start_game_dialog_title">Choose a quest</string>
    <string name="pref_cat_misc">Miscellaneous</string>
    <string name="pref_clean_sdcard_title">Clean SD card content</string>
    <string name="pref_clean_sdcard_summary">Deletes all downloaded content from the SD card.</string>
    <string name="pref_clean_sdcard_dlg_title">Clean SD card content</string>
    <string name="pref_clean_sdcard_dlg_msg">You are about to wipe all downloaded GeoQuest data from the SD card. This data has to be downloaded again if you want to play a quest. Do you really want to continue?</string>
    <string name="pref_clean_sdcard_toast_success">Local game content was successfully deleted.</string>
    <string name="pref_clean_sdcard_toast_error">Couldn\'t remove local game content.</string>
    <string name="context_auto_start_game">Load on application start</string>
    <string name="context_auto_start_game_toast">Automatic quest start enabled</string>
    <string name="pref_cat_security">Security</string>
    <string name="pref_password_title">Password</string>
    <string name="pref_password_summary">Change application password</string>
    <string name="pref_password_dialog_title">New password</string>
    <string name="pref_password_dialog_message">Type in your new password twice.\nThis password is used to protect some important settings. Remember it carefully as you have to reinstall the app in case you\'ve forgotten it.</string>
    <string name="pref_password_dialog_error_empty_pw">Password musn\'t be empty!</string>
    <string name="pref_password_dialog_error_pws_not_equal">Make sure that both passwords are the same!</string>
    <string name="error_fetching_remote_repo_list">Error fetching or processing repository list from server!</string>
    <string name="error_fetching_remote_repo_list_url">Error: GeoQuest server URL malformed!</string>
    <string name="error_fetching_remote_repo_list_io">Error: Problem with communication to GeoQuest server.</string>
    <string name="error_fetching_remote_repo_list_document">Error: Game information received from GeoQuest server invalid.</string>
    <string name="error_fetching_local_repo_list">Error fetching or processing local repository list - ignore, if this was the first app start!</string>
    <string name="error_dialog_title">Sorry, but there is a problem.</string>
    <string name="error_getting_device_location">Unfortunately the current position could not be determined.</string>
    <string name="scoreIncreasedBy">Yeah: You increased your score by </string>
    <string name="scoreDecreasedBy">Oops: Your score ran down by </string>
    <string name="scoreZero">Ooh: Your score is zero!</string>
    <string name="imprintTitle">Imprint</string>
    <string name="imprint_authorNameLabel">Author</string>
    <string name="imprint_legalFormLabel">Legal form</string>
    <string name="imprint_streetAndNrLabel">Street</string>
    <string name="imprint_postalCodeLabel">Postcode</string>
    <string name="imprint_cityLabel">City</string>
</resources>