<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--
    <item
        android:id="@+id/menu_preferences"
        android:checkable="false"
        android:icon="@drawable/icon_prefs"
        android:title="@string/menu_preferences">
    </item>
    -->
    <item
        android:id="@+id/menu_info"
        android:checkable="false"
        android:title="@string/menu_info">
    </item>
    <item
        android:id="@+id/menu_imprint"
        android:checkable="false"
        android:icon="@drawable/icon_imprint"
        android:title="@string/menu_imprint">
    </item>
    <item
        android:id="@+id/menu_debugMode"
        android:checkable="true"
        android:showAsAction="never"
        android:title="@string/menu_debugMode">
    </item>

</menu>